update icon sizes, overflow fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,6 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-    padding: 0;
-    margin: 0;
+body {
+    height: 100vh;
 }
